<resources>
    <string name="app_name">TMDB</string>
    <string name="runtime_string">Runtime:\u0020</string>
    <string name="rating_string">Rating:\u0020</string>
    <string name="budget_string">Budget:\u0020$\u0020</string>
    <string name="revenue_string">Revenue:\u0020$\u0020</string>
    <string name="tagline_string">Tagline:\u0020</string>
    <string name="release_date_string">Released:\u0020</string>
    <string name="genre_string">Genres:\u0020</string>
    <string name="language_string">Language:\u0020</string>
    <string name="production_company_string">Produced By:\u0020</string>
    <string name="cast_string">Cast:\u0020</string>
    <string name="crew_string">Crew:\u0020</string>
    <string name="search_movie">Search Movie</string>
    <string-array name="dropdownarray">
        <item>
            Now Playing
        </item>
        <item>
            Upcoming
        </item>
        <item>
            Top Rated
        </item>
        <item>
            Search
        </item>
        <item>
            Search Results
        </item>
    </string-array>
</resources>
